--- a/Makefile.am
+++ b/Makefile.am
@@ -15,8 +15,7 @@ LIBJQ_SRC = src/builtin.c src/bytecode.c src/compile.c src/execute.c    \
 
 ### C build options
 
-AM_CFLAGS = -Wextra -Wall -Wno-missing-field-initializers               \
-        -Wno-unused-parameter -Wno-unused-function
+AM_CFLAGS = -Wextra -Wall -W -Wno-unused-parameter -Wno-unused-function
 
 ACLOCAL_AMFLAGS = -I config/m4
 
